renamed data to content

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,6 +37,9 @@
       ],
       "@fonts/*": [
         "src/fonts/*"
+      ],
+      "@content/*": [
+        "src/content/*"
       ]
     },
     "plugins": [
