--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "next": "16.0.4",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "scrollreveal": "^4.0.9",
-    "styled-components": "^6.1.19"
+    "scrollreveal": "^4.0.9"
   },
   "devDependencies": {
     "@types/node": "^20",
